--- a/notify_server/index.html
+++ b/notify_server/index.html
@@ -22,6 +22,21 @@
       source.onmessage = function(event) {
         console.log("Got:", event.data);
       };
+      source.addEventListener("NewChat", function(event) {
+        console.log("NewChat:", event.data);
+      });
+      source.addEventListener("AddToChat", function(event) {
+        console.log("AddToChat:", event.data);
+      });
+      source.addEventListener("RemoveFromChat", function(event) {
+        console.log("RemoveFromChat:", event.data);
+      });
+      source.addEventListener("NewMessage", function(event) {
+        console.log("NewMessage:", event.data);
+      });
+      source.addEventListener("ChatNameUpdated", function(event) {
+    console.log("ChatNameUpdated:", event.data);
+});
     </script>
   </body>
 </html>
